# elio-audio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  elio-audio.ino  jbl_begin.h  jbl_latency.h  platformio.ini  pyproject.toml  receiver.py  todo.txt  wav_to_header.py
src/: main.cpp
tools/: split_wav.sh
